librbd: fix merge-diff for >2GB diff-files

from http://tracker.ceph.com/issues/14030

Fixes: #14030

Signed-off-by: Yunchuan Wen <yunchuan.wen@kylin-cloud.com>